--- a/package.json
+++ b/package.json
@@ -4,22 +4,18 @@
   "private": true,
   "type": "module",
   "scripts": {
-    "dev": "tsx src/cli.ts",
-    "build": "tsc -p tsconfig.json",
-    "start": "node dist/cli.js"
+    "dev": "node src/cli.js",
+    "start": "node src/cli.js"
   },
   "dependencies": {
     "@langchain/community": "^0.3.0",
     "@langchain/core": "^0.3.0",
     "@langchain/ollama": "^0.2.0",
     "@langchain/textsplitters": "^0.1.0",
+    "@zilliz/milvus2-sdk-node": "^2.6.0",
     "dotenv": "^16.4.5",
-    "langchain": "^0.3.0"
-  },
-  "devDependencies": {
-    "@types/node": "^20.11.0",
-    "tsx": "^4.19.0",
-    "typescript": "^5.4.5"
+    "hnswlib-node": "^3.0.0",
+    "langchain": "^0.3.0",
+    "pdf-parse": "^1.1.1"
   }
 }
-
