--- a/package.json
+++ b/package.json
@@ -8,14 +8,19 @@
     "start": "node src/cli.js"
   },
   "dependencies": {
-    "@langchain/community": "^0.3.0",
-    "@langchain/core": "^0.3.0",
-    "@langchain/ollama": "^0.2.0",
-    "@langchain/textsplitters": "^0.1.0",
+    "@langchain/classic": "^1.0.15",
+    "@langchain/community": "^1.1.12",
+    "@langchain/core": "^1.1.19",
+    "@langchain/langgraph": "^1.1.3",
+    "@langchain/ollama": "^1.2.2",
+    "@langchain/openai": "^1.2.5",
+    "@langchain/textsplitters": "^1.0.1",
     "@zilliz/milvus2-sdk-node": "^2.6.0",
     "dotenv": "^16.4.5",
     "hnswlib-node": "^3.0.0",
-    "langchain": "^0.3.0",
-    "pdf-parse": "^1.1.1"
+    "langchain": "^1.2.18",
+    "pdf-parse": "^1.1.1",
+    "redis": "^5.10.0",
+    "zod-to-json-schema": "^3.24.6"
   }
 }
